--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
 # Cloudflare Workers Configuration for MyGPT API
 
-name = "mygpt-api"
+name = "mygpt"
 main = "workers/api.ts"
 compatibility_date = "2024-01-01"
 
@@ -12,7 +12,7 @@ compatibility_date = "2024-01-01"
 [[d1_databases]]
 binding = "DB"
 database_name = "mygpt-production"
-database_id = "a1b2c3d4-e5f6-7890-abcd-ef1234567890" 
+database_id = "2971b8e0-cf03-4431-be4d-f05986a07726" 
 
 # 環境変数（シークレット）
 # OPENAI_API_KEY は以下のコマンドで設定:
