--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "自前ChatGPTアプリケーション - OpenAI Conversations API + Cloudflare D1",
   "private": true,
   "type": "module",
+  "packageManager": "yarn@4.9.1",
   "scripts": {
     "dev": "nuxt dev",
     "build": "nuxt build",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250117.0",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.7.3",
     "wrangler": "^3.103.0"
   }
