--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,12 @@
-# Cloudflare Workers Configuration for MyGPT API
-
+# Cloudflare Workers Configuration for MyGPT
 name = "mygpt"
-main = "workers/api.ts"
+main = ".output/server/index.mjs"
 compatibility_date = "2024-01-01"
+compatibility_flags = ["nodejs_compat"]
+
+# 静的アセット
+[assets]
+directory = ".output/public"
 
 # D1データベース設定
 # 注意: database_id は実際のD1作成後に手動で設定する必要があります
